--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <form method="GET" action="/news">
+  <form method="POST" action="">
     <div class="form-group">
       <label for="search-input">Key words</label>
       <input
@@ -7,9 +7,21 @@
         name="q"
         class="form-control"
         id="search-input"
-        aria-describedby="emailHelp"
         placeholder="Enter key words..."
       />
+    </div>
+    <div class="form-group">
+      <label for="gender-input">Gender</label>
+      <select
+        type="text"
+        name="gender"
+        class="form-control"
+        id="gender-input"
+      >
+        <option value="">-- Select a gender</option>
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+      </select>
     </div>
     <button type="submit" class="btn btn-primary">Search</button>
   </form>
