[CRUD] Read from DB

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,9 +1,5 @@
 @import '_variables.scss';
 
-h1 {
-    color: $red-color;
-}
-
-h2 {
-    color: orangered;
+.card-course-item {
+    margin-top: 16px;
 }
