--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,3 +3,9 @@
 .card-course-item {
     margin-top: 16px;
 }
+
+.user-avatar {
+    width: 32px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
