--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -18,8 +18,7 @@
         class="form-control"
         id="description"
         name="description"
-      >
-      </textarea>
+      ></textarea>
     </div>
     <div class="form-group">
       <label for="videoId">Video Id</label>
