--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,7 +1,12 @@
 <div class="mt-4">
   <div>
-    <h3>My courses</h3>
-    <a href="/me/trash/courses">Recycle bin</a>
+    <a href="/me/stored/courses">
+      <i 
+        class="bi bi-arrow-left text-dark"
+        style="font-size: 2rem"
+      ></i>
+    </a>
+    <h3 class="ml-5">My deleted courses</h3>
   </div>
   <table class="table mt-4">
     <thead>
@@ -20,13 +25,13 @@
           <td>{{ this.level }}</td>
           <td>{{ this.createdAt }}</td>
           <td>
-              <a href="/courses/{{this._id}}/edit" class="btn btn-link">
+              <a class="btn btn-link btn-restore" data-id="{{this._id}}">
                 <i 
-                  class="bi bi-pencil-fill"
+                  class="bi bi-arrow-clockwise text-primary"
                   style="font-size: 18px"
                 ></i>
               </a>
-              <a href="/courses/" class="btn btn-link" data-id="{{this._id}}" data-toggle="modal" data-target="#delete-course-model">
+              <a class="btn btn-link" data-id="{{this._id}}" data-toggle="modal" data-target="#delete-course-model">
                 <i 
                   class="bi bi-trash text-danger"
                   style="font-size: 18px"
@@ -37,8 +42,8 @@
         {{else}}
         <tr>
           <td colspan="5" class="text-center">
-            You haven't posted a course.
-            <a href="/courses/create">Create a new course</a>
+            Empty delete course. 
+            <a href="/me/stored/courses">My courses</a>
           </td>
         </tr>
     {{/each}}
@@ -57,27 +62,30 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Do you want to delete this course?</p>
+        <p>This action can't restore. Are you sure you want to delete this course?</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Delete</button>
+        <button id="btn-delete-course" type="button" class="btn btn-danger">Force delete</button>
       </div>
     </div>
   </div>
 </div>
 
-{{!-- Delete Hidden form--}}
-<form method="POST" name="delete-course-form">
-
-</form>
+{{!-- Hidden delete form --}}
+<form method="POST" name="delete-course-form"></form>
+  
+  {{!-- Hidden restore form --}}
+<form method="POST" name="restore-course-form"></form>
 
 <script>
 
   document.addEventListener("DOMContentLoaded", function() {
     var courseId;
     var deleteCourseForm = document.forms["delete-course-form"];
+    var restoreCourseForm = document.forms["restore-course-form"];
     var btnDeleteCourse = document.getElementById('btn-delete-course');
+    var restoreBtn = $('.btn-restore');
 
     // When dialog confirm clicked
     $('#delete-course-model').on('show.bs.modal', function (event) {
@@ -87,8 +95,18 @@
 
     // When delete course btn clicked
     btnDeleteCourse.onclick = function () {
-      deleteCourseForm.action = '/courses/' + courseId + '?_method=DELETE';
+      deleteCourseForm.action = '/courses/' + courseId + '/force?_method=DELETE';
       deleteCourseForm.submit();
     }
+
+    // Restore btn clicked
+    restoreBtn.click(function (e) {
+      e.preventDefault();
+
+      var courseId = $(this).data('id');
+    
+      restoreCourseForm.action = '/courses/' + courseId + '/restore?_method=PATCH';
+      restoreCourseForm.submit();
+    })
   });
 </script>
