--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
   <div>
     <h3>My courses</h3>
-    <a href="/me/trash/courses">Recycle bin</a>
+    <a href="/me/trash/courses">Recycle bin ({{deletedCount}})</a>
   </div>
   <table class="table mt-4">
     <thead>
