--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,58 +1,98 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="post" action="/courses/handle-form-actions">
   <div>
     <h3>My courses</h3>
     <a href="/me/trash/courses">Recycle bin ({{deletedCount}})</a>
+    <div class="mt-4 d-flex align-items-center">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="checkbox-all"
+        />
+        <label class="form-check-label" for="checkbox-all">
+          Select all
+        </label>
+      </div>
+
+      <select
+        class="form-control form-control-sm checkbox-select-add-options mx-2"
+        name="action"
+        required
+      >
+        <option value="">-- Select Action --</option>
+        <option value="delete">Delete</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Action</button>
+    </div>
   </div>
   <table class="table mt-4">
     <thead>
       <tr>
+        <td></td>
         <th scope="col">#</th>
         <th scope="col">Course Name</th>
         <th scope="col">Level</th>
         <th scope="col" colspan="2">Created at</th>
       </tr>
     </thead>
-      <tbody>
-    {{#each courses}}
+    <tbody>
+      {{#each courses}}
         <tr>
-          <th scope="row">{{sum @index 1}}</th>
-          <td>{{ this.name }}</td>
-          <td>{{ this.level }}</td>
-          <td>{{ this.createdAt }}</td>
           <td>
-              <a href="/courses/{{this._id}}/edit" class="btn btn-link">
-                <i 
-                  class="bi bi-pencil-fill"
-                  style="font-size: 18px"
-                ></i>
-              </a>
-              <a href="/courses/" class="btn btn-link" data-id="{{this._id}}" data-toggle="modal" data-target="#delete-course-model">
-                <i 
-                  class="bi bi-trash text-danger"
-                  style="font-size: 18px"
-                ></i>
-              </a>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                name="courseIds[]"
+                value="{{this._id}}"
+              />
+            </div>
+          </td>
+          <th scope="row">{{sum @index 1}}</th>
+          <td>{{this.name}}</td>
+          <td>{{this.level}}</td>
+          <td>{{this.createdAt}}</td>
+          <td>
+            <a href="/courses/{{this._id}}/edit" class="btn btn-link">
+              <i class="bi bi-pencil-fill" style="font-size: 18px"></i>
+            </a>
+            <a
+              href="/courses/"
+              class="btn btn-link"
+              data-id="{{this._id}}"
+              data-toggle="modal"
+              data-target="#delete-course-model"
+            >
+              <i class="bi bi-trash text-danger" style="font-size: 18px"></i>
+            </a>
           </td>
         </tr>
-        {{else}}
+      {{else}}
         <tr>
           <td colspan="5" class="text-center">
             You haven't posted a course.
             <a href="/courses/create">Create a new course</a>
           </td>
         </tr>
-    {{/each}}
-      </tbody>
+      {{/each}}
+    </tbody>
   </table>
-</div>
+</form>
 
-{{!-- Confirm delete course --}}
+{{! Confirm delete course }}
 <div id="delete-course-model" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Delete course?</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -60,35 +100,79 @@
         <p>Do you want to delete this course?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Delete</button>
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Cancel</button>
+        <button
+          id="btn-delete-course"
+          type="button"
+          class="btn btn-danger"
+        >Delete</button>
       </div>
     </div>
   </div>
 </div>
 
-{{!-- Delete Hidden form--}}
+{{! Delete Hidden form}}
 <form method="POST" name="delete-course-form">
 
 </form>
 
 <script>
-
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("DOMContentLoaded", function() { 
     var courseId;
     var deleteCourseForm = document.forms["delete-course-form"];
+    var containerForm = document.forms["container-form"]; 
     var btnDeleteCourse = document.getElementById('btn-delete-course');
+    var checkboxAll = $('#checkbox-all');
+    var courseItemCheckbox = $('input[name="courseIds[]"]');
+    var checkAllSubmitBtn = $('.check-all-submit-btn');
 
-    // When dialog confirm clicked
-    $('#delete-course-model').on('show.bs.modal', function (event) {
-      var button = $(event.relatedTarget) // Button that triggered the modal
-      courseId = button.data('id');
+    // When dialog confirmation is clicked
+    $('#delete-course-model').on('show.bs.modal', function (event) { 
+      var button = $(event.relatedTarget);
+      courseId = button.data('id'); 
     });
 
-    // When delete course btn clicked
+    // When delete course btn is clicked
     btnDeleteCourse.onclick = function () {
       deleteCourseForm.action = '/courses/' + courseId + '?_method=DELETE';
-      deleteCourseForm.submit();
+      deleteCourseForm.submit(); 
     }
+
+    // Checkbox all is checked
+   checkboxAll.change(function() {
+     var isCheckedAll = $(this).prop('checked');
+      courseItemCheckbox.prop('checked', isCheckedAll);
+      renderCheckAllSubmitBtn();
+   });
+
+   // Course Item Checkbox is checked
+   courseItemCheckbox.change(function() {
+     var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+
+     checkboxAll.prop('checked', isCheckedAll);
+     renderCheckAllSubmitBtn();
+   });
+
+   //Check all submit button clicked
+  checkAllSubmitBtn.on('submit', function (e) {
+    var isSubmittable = !$(this).hasClass('disabled');
+    if (!isSubmittable) {
+      e.preventDefault();
+    }
+  })
+
+    // Re-render check all submit button
+   function renderCheckAllSubmitBtn() {
+     var checkedCount = $('input[name="courseIds[]"]:checked').length;
+     if (checkedCount > 0) {
+       checkAllSubmitBtn.removeClass('disabled');
+     } else {
+       checkAllSubmitBtn.addClass('disabled');
+     }
+   }
   });
 </script>
