Auto increment id field

--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,4 +1,9 @@
-<form class="mt-4" name="container-form" method="post" action="/courses/handle-form-actions">
+<form
+  class="mt-4"
+  name="container-form"
+  method="post"
+  action="/courses/handle-form-actions"
+>
   <div>
     <h3>My courses</h3>
     <a href="/me/trash/courses">Recycle bin ({{deletedCount}})</a>
@@ -11,8 +16,8 @@
           id="checkbox-all"
         />
         <label class="form-check-label" for="checkbox-all">
-          Select all
-        </label>
+          Select All
+          </label>
       </div>
 
       <select
@@ -24,26 +29,31 @@
         <option value="delete">Delete</option>
       </select>
 
-      <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Action</button>
+      <button
+        class="btn btn-primary btn-sm check-all-submit-btn disabled"
+      >Action</button>
     </div>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
-        <td></td>
-        <th scope="col">#</th>
+        <th></th>
+        <th scope="col">
+          ID
+          {{{sortable "_id" _sort}}}
+        </th>
         <th scope="col">
           Course Name
-          {{{sortable 'name' _sort}}}
+          {{{sortable "name" _sort}}}
         </th>
         <th scope="col">
           Level
-          {{{sortable 'level' _sort}}}
+          {{{sortable "level" _sort}}}
         </th>
         <th scope="col" colspan="2">
           Created at
-          {{{sortable 'createdAt' _sort}}}
+          {{{sortable "createdAt" _sort}}}
         </th>
       </tr>
     </thead>
@@ -60,7 +70,7 @@
               />
             </div>
           </td>
-          <th scope="row">{{sum @index 1}}</th>
+          <th scope="row">{{this._id}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
           <td>{{this.createdAt}}</td>
@@ -131,58 +141,27 @@
 </form>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() { 
-    var courseId;
-    var deleteCourseForm = document.forms["delete-course-form"];
-    var containerForm = document.forms["container-form"];
-    var btnDeleteCourse = document.getElementById('btn-delete-course');
-    var checkboxAll = $('#checkbox-all');
-    var courseItemCheckbox = $('input[name="courseIds[]"]');
-    var checkAllSubmitBtn = $('.check-all-submit-btn');
-
-    // When dialog confirmation is clicked
-    $('#delete-course-model').on('show.bs.modal', function (event) { 
-      var button = $(event.relatedTarget);
-      courseId = button.data('id'); 
-    });
-
-    // When delete course btn is clicked
-    btnDeleteCourse.onclick = function () {
-      deleteCourseForm.action = '/courses/' + courseId + '?_method=DELETE';
-      deleteCourseForm.submit(); 
-    }
-
-    // Checkbox all is checked
-   checkboxAll.change(function() {
-     var isCheckedAll = $(this).prop('checked');
-      courseItemCheckbox.prop('checked', isCheckedAll);
-      renderCheckAllSubmitBtn();
-   });
-
-   // Course Item Checkbox is checked
-   courseItemCheckbox.change(function() {
-     var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
-
-     checkboxAll.prop('checked', isCheckedAll);
-     renderCheckAllSubmitBtn();
-   });
-
-   //Check all submit button clicked
-  checkAllSubmitBtn.on('submit', function (e) {
-    var isSubmittable = !$(this).hasClass('disabled');
-    if (!isSubmittable) {
-      e.preventDefault();
-    }
-  })
-
-    // Re-render check all submit button
-   function renderCheckAllSubmitBtn() {
-     var checkedCount = $('input[name="courseIds[]"]:checked').length;
-     if (checkedCount > 0) {
-       checkAllSubmitBtn.removeClass('disabled');
-     } else {
-       checkAllSubmitBtn.addClass('disabled');
-     }
-   }
-  });
+  document.addEventListener("DOMContentLoaded", function() { var courseId; var
+  deleteCourseForm = document.forms["delete-course-form"]; var containerForm =
+  document.forms["container-form"]; var btnDeleteCourse =
+  document.getElementById('btn-delete-course'); var checkboxAll =
+  $('#checkbox-all'); var courseItemCheckbox = $('input[name="courseIds[]"]');
+  var checkAllSubmitBtn = $('.check-all-submit-btn'); // When dialog
+  confirmation is clicked $('#delete-course-model').on('show.bs.modal', function
+  (event) { var button = $(event.relatedTarget); courseId = button.data('id');
+  }); // When delete course btn is clicked btnDeleteCourse.onclick = function ()
+  { deleteCourseForm.action = '/courses/' + courseId + '?_method=DELETE';
+  deleteCourseForm.submit(); } // Checkbox all is checked
+  checkboxAll.change(function() { var isCheckedAll = $(this).prop('checked');
+  courseItemCheckbox.prop('checked', isCheckedAll); renderCheckAllSubmitBtn();
+  }); // Course Item Checkbox is checked courseItemCheckbox.change(function() {
+  var isCheckedAll = courseItemCheckbox.length ===
+  $('input[name="courseIds[]"]:checked').length; checkboxAll.prop('checked',
+  isCheckedAll); renderCheckAllSubmitBtn(); }); //Check all submit button
+  clicked checkAllSubmitBtn.on('submit', function (e) { var isSubmittable =
+  !$(this).hasClass('disabled'); if (!isSubmittable) { e.preventDefault(); } })
+  // Re-render check all submit button function renderCheckAllSubmitBtn() { var
+  checkedCount = $('input[name="courseIds[]"]:checked').length; if (checkedCount
+  > 0) { checkAllSubmitBtn.removeClass('disabled'); } else {
+  checkAllSubmitBtn.addClass('disabled'); } } });
 </script>
